<resources>
    <string name="app_name">Sport Tracker</string>
    <string name="button_add_start_date_text">Дата начала</string>
    <string name="button_save_event_text">Сохранить</string>
    <string name="fragment_tracker_label">Трекер</string>
    <string name="fragment_journal_label">Журнал</string>
    <string name="info_dialog_title_text">Важная информация!</string>
    <string name="info_dialog_message_text">Для корректной работы приложения нужно дать разрешение на отслеживание геолокации. Без данного разрешения некоторые функции приложения не будут работать.</string>
    <string name="location_permissions_need_to_be_granted_dialog_message">Вам нужно выдать разрешение на отслеживание местоположения в любом случае, чтобы приложение могло использовать GPS</string>
    <string name="activity_permissions_need_to_be_granted_dialog_message">Вам нужно выдать разрешение на отслеживание физической активности, чтобы приложение могло использовать педометр</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trains_fragment_title_text">Тренировки</string>
    <string name="permissions_settings_toast_text">Вы выбрали больше не запрашивать разрешение. Вы можете изменить это в настройках приложения</string>
    <string name="permissions_dialog_title">Разрешения</string>
    <string name="permissions_dialog_message">Вы выбрали больше не запрашивать разрешение. Вы можете изменить это в настройках приложения. Желаете открыть настройки?</string>
    <string name="permissions_deny_dialog_message">Без выдачи запрашиваемых разрешений приложение не сможет получать данные. Вы уверены, что хотите запретить выдачу этих разрешений?</string>
    <string name="permissions_not_granted_text">Разрешения не выданы</string>

    <string name="mapbox_access_token">pk.eyJ1IjoidmZyb21ubjE5MDkiLCJhIjoiY2wxdno3azZlMDN1dzNjbzlzOG1xb2VxayJ9.PXcnZCFnQ8EKdTu8ASxNow</string>
    <string name="textview_average_speed_text">Средняя скорость</string>
    <string name="timer_just_started_text">0 мин.</string>
    <string name="event_info_distance_text">Дистанция</string>
    <string name="tempo_text_value">Темп</string>
    <string name="steps_text_value">Шаги</string>
    <string name="gps_points_steps_value">GPS-точки</string>
    <string name="time_text_value">Время</string>
    <string name="button_close_text">Закрыть</string>
    <string name="information_text_value">Информация</string>
    <string name="delete_menu_item">Удалить</string>
    <string name="share_menu_item">Поделиться</string>

    <!-- Dialogs -->
    <string name="warning_dialogs_title">Внимание</string>
    <string name="dialog_positive_button_text">Да</string>
    <string name="dialog_negative_button_text">Не сейчас</string>
    <string name="event_info_dialog_delete_message">Вы уверены, что хотите удалить тренировку? Все данные будут утеряны!</string>
    <string name="tv_cadence_text">Каденс</string>
    <string name="tv_time_caps_text">ВРЕМЯ</string>
    <string name="tv_avg_speed_caps_text">СР. СКОРОСТЬ</string>
    <string name="tv_km_per_hour_text">км/ч</string>
    <string name="tv_tempo_caps_text">ТЕМП</string>
    <string name="tv_min_per_km_text">мин/км</string>
    <string name="tv_distance_caps_text">ДИСТАНЦИЯ</string>
    <string name="tv_statistics_initial_value">0.00</string>
    <string name="tv_km_text">км</string>
    <string name="tv_cadence_caps_text">КАДЕНС</string>
    <string name="tv_steps_per_minute">шаг/мин</string>
    <string name="tv_steps_caps_text">ШАГОВ</string>
    <string name="tv_int_initial_value">0</string>
    <string name="tv_gps_points_text">GPS-точек</string>
    <string name="tv_recording_text">Запись</string>
    <string name="tv_close_text">Закрыть</string>
    <string name="tv_time_text">Время</string>
    <string name="tv_time_initial_value">00:00:00</string>
    <string name="tv_distance_text">Дистанция (км)</string>
    <string name="tv_avg_speed_text">Средняя скорость (км/ч)</string>
    <string name="tv_tempo_text">Темп (мин/км)</string>
    <string name="tv_pause_tempo_init_value">00:00</string>
    <string name="tv_pause_steps_text">Шаги</string>
    <string name="tv_gps_pause_text">GPS-точки</string>
    <string name="tv_cadence_pause_text">Каденс (шаг/мин)</string>
    <string name="finish_tracking_warning_dialog_text">Прошло слишком мало времени. Продолжите тренировку или начните сначала!</string>
    <string name="dialog_continue_text">Продолжить</string>
    <string name="dialog_cancel_button_text">Отмена</string>
    <string name="tv_train_text">Тренировка</string>
    <string name="notification_paused">Запись данных приостановлена</string>
    <string name="notification_resumed">Идет запись данных</string>
    <string name="time_start_and_finish_recording_warning">Выберите время начала и конца сессии!</string>
    <string name="recording_start_button_text">Начало Записи</string>
    <string name="recording_finish_button_text">Конец Записи</string>
    <string name="schedule_tracking_bottom_sheet_title_edit">Изменить</string>
    <string name="time_to_start_recording_text">Планирование тренировки</string>
    <string name="button_plan_session_text">Ок</string>
    <string name="train_planned_text">Тренировка запланирована!</string>
    <string name="warning_text">НАПОМИНАНИЕ</string>
    <string name="its_time_to_start_recording">Время начать запись!</string>
    <string name="recording_type_dialog_description">Выберите \"Запланировать\", чтобы в указанное вами время, пришло уведомление, напоминающее начать запись. Выберите \"Начать\", чтобы сразу начать запись данных.</string>
    <string name="recording_type_dialog_title">Запланировать или начать сейчас</string>
    <string name="recording_type_dialog_positive_button_text">Запланировать</string>
    <string name="recording_type_dialog_negative_button_text">Начать</string>
    <string name="warning_reminder_before_text">Начало тренировки через минуту!</string>
    <string name="warning_turn_off_doze_mode">Выключите энергосбережение</string>
    <string name="schedule_tracking_bottom_sheet_button_update_text">Обновить</string>
    <string name="date_range_pick_warning">Неверно выбран временной интервал!</string>
    <string name="gps_calibration_mode_title_text">Идет калибровка точности GPS-датчика. Пожалуйста, подождите...</string>
    <string name="toolbar_title_recording_text">Запись</string>
    <string name="my_location_button_content_description_text">Моё местоположение</string>
    <string name="profile_title_text">Профиль</string>
    <string name="go_to_settings_button_context_description_text">Настройки</string>
    <string name="settings_title_text">Настройки</string>
    <string name="frequency_setting_text">Частота (секунды)</string>
    <string name="distance_setting_text">Растояние (метры)</string>
    <string name="menu_main_bottom_nav_item_text">Главная</string>
    <string name="menu_recording_bottom_nav_item_text">Запись</string>
    <string name="menu_profile_bottom_nav_item_text">Профиль</string>

    <string name="gps_setting_frequency_input_title_text">Введите частоту</string>
    <string name="gps_setting_distance_input_title_text">Введите расстояние</string>
    <string name="gps_setting_frequency_input_hint_text">Частота (в секундах)</string>
    <string name="gps_setting_distance_input_hint_text">Дистанция (в метрах)</string>
    <string name="freq_setting_error_text">Значение должно быть от 1 до 60!</string>
    <string name="distance_setting_error_text">Значение должно быть в диапазоне от 3 до 200</string>
    <string name="warning_dialog_schedule_intersection_message_text">Период, который вы выбрали пересекается с другими запланированными тренировками. Выберите другую дату старта или длительность.</string>
    <string name="warning_dialog_schedule_calibration_time_message_text">Недостаточно времени для калибровки GPS датчика. Измените время калибровки или дату старта!</string>
    <string name="about_app_text_view_text">О приложении</string>
    <string name="dialog_about_app_title_text">О программе</string>


    <string-array name="tabs_titles">
        <item>Запланированные</item>
        <item>Завершенные</item>
    </string-array>
</resources>