<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bottomSheetDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_to_start_recording_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventNameTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Название ивента" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/recording_start_button_text"
            app:strokeColor="@color/app_status_bar_color"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFinish"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/recording_finish_button_text"
            app:strokeColor="@color/app_status_bar_color"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_cancel_button_text" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSchedule"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/button_plan_session_text" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
